--- a/nuevaReserva/templates/listadoHistorico.html
+++ b/nuevaReserva/templates/listadoHistorico.html
@@ -40,6 +40,9 @@
                             Cliente:
                         </th>
                         <th>
+                            Telefono:
+                        </th>
+                        <th>
                             Fecha de la Reservación:
                         </th>
                         <th>
@@ -68,6 +71,10 @@
                         </FONT>
                         <td>
                             <FONT COLOR="white">{{c.nombre}} {{c.apellido}}
+                        </td>
+                        </FONT>
+                        <td>
+                            <FONT COLOR="white">{{c.telefono}}
                         </td>
                         </FONT>
                         <td>
