--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -46,10 +46,10 @@
                 <font color="green">Total Reservas Atendidas: {{totalAtendido}}<br></font>
             </b>
             <b>
-                <font color="yellow">Total Reservas anuladas: {{totalAnulado}}<br></font>
+                <font color="red">Total Reservas anuladas: {{totalAnulado}}<br></font>
             </b>
             <b>
-                <font color="red">Total Reservas No Show: {{totalNoshow}}</font>
+                <font color="yellow">Total Reservas No Show: {{totalNoshow}}</font>
             </b>
 
         </div>
