--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -34,6 +34,14 @@
 
 <body>
     <div class="row">
+
+        <div style="text-align: center;" class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
+            <br><br>
+            <a href='/muestraTarde/' class="btn btn-light">Tarde</a>
+            <a href='/muestraCena/' class="btn btn-light">Cena</a>
+            <a href='/reservasDelDia/' class="btn btn-light">Todos</a>
+        
+        </div>
         <div style="text-align: center;" class="col-sm-12 col-md-6 col-lg-10 col-xl-10">
 
 
