--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -57,7 +57,11 @@
                 <font color="red">Total Reservas anuladas: {{totalAnulado}}<br></font>
             </b>
             <b>
-                <font color="yellow">Total Reservas No Show: {{totalNoshow}}</font>
+                <font color="red">Total Reservas No Show: {{totalNoshow}}<br></font>
+            </b>
+
+            <b>
+                <font color="white">Total Clientes Atendidos: {{totalPersonas}}</font>
             </b>
 
         </div>
