--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -61,7 +61,7 @@
             </b>
 
             <b>
-                <font color="white">Total Clientes Atendidos: {{totalPersonas}}</font>
+                <font color="white">Total Clientes Atendidos: {{totalPersonas|default:0}}</font>
             </b>
 
         </div>
@@ -150,7 +150,7 @@
                         
                         <td>
                             <h4>
-                                <FONT COLOR="white">{{c.mesa}}
+                                <FONT COLOR="white">{{c.mesa|default:" "}}
                             </h4>
                         </td>
                         </FONT>
