--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -57,7 +57,7 @@
                 <font color="red">Total Reservas anuladas: {{totalAnulado}}<br></font>
             </b>
             <b>
-                <font color="red">Total Reservas No Show: {{totalNoshow}}<br></font>
+                <font color="yellow">Total Reservas No Show: {{totalNoshow}}<br></font>
             </b>
 
             <b>
