--- a/nuevaReserva/templates/listadoHistorico.html
+++ b/nuevaReserva/templates/listadoHistorico.html
@@ -74,7 +74,7 @@
                         </td>
                         </FONT>
                         <td>
-                            <FONT COLOR="white">{{c.telefono}}
+                            <FONT COLOR="white">{{c.telefono|default:" "}}
                         </td>
                         </FONT>
                         <td>
