--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -141,7 +141,7 @@
                             <form action='/guardarMesa/{{c.id}}' method="POST" >
                                 {% csrf_token %}
                                 <input type="text" id="mesa" name="mesa" size="7" />
-                                <button>
+                                <button class="btn btn-primary">
                                     GUARDAR
                                 </button>
                             </form>             
