--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -37,7 +37,7 @@
 
         <div style="text-align: center;" class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
             <br><br>
-            <a href='/muestraTarde/' class="btn btn-light">Tarde</a>
+            <a href='/muestraTarde/' class="btn btn-light">Almuerzo</a>
             <a href='/muestraCena/' class="btn btn-light">Cena</a>
             <a href='/reservasDelDia/' class="btn btn-light">Todos</a>
         
