--- a/nuevaReserva/templates/listadoHistorico.html
+++ b/nuevaReserva/templates/listadoHistorico.html
@@ -43,6 +43,9 @@
                             Telefono:
                         </th>
                         <th>
+                            Email:
+                        </th>
+                        <th>
                             Fecha de la Reservación:
                         </th>
                         <th>
@@ -75,6 +78,10 @@
                         </FONT>
                         <td>
                             <FONT COLOR="white">{{c.telefono|default:" "}}
+                        </td>
+                        </FONT>
+                        <td>
+                            <FONT COLOR="white">{{c.correo|default:" "}}
                         </td>
                         </FONT>
                         <td>
