--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -150,7 +150,7 @@
                         
                         <td>
                             <h4>
-                                <FONT COLOR="white">{{c.mesa|default:" "}}
+                                <FONT COLOR="white">{{c.mesa_asignada|default:" "}}
                             </h4>
                         </td>
                         </FONT>
