--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -15,7 +15,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" style="color: #3b1905" href='/nuevaReserva/' >Nueva Reserva</a>
         <a class="nav-item nav-link" style="color: #3b1905" href='/reservasDelDia/' >Reservas del Día</a>
-        <a class="nav-item nav-link" style="color: #3b1905" href='/enEspera/' >Reservas en espera</a>
+        <!-- <a class="nav-item nav-link" style="color: #3b1905" href='/enEspera/' >Reservas en espera</a> -->
         <!-- <a class="nav-item nav-link" style="color: #3b1905" href='/enProceso/' >En Progreso</a> -->
         <a class="nav-item nav-link" style="color: #3b1905" href='/historico/' >Histórico</a>
         <!-- <a class="nav-item nav-link" style="color: #3b1905" href='/estadoActual/' >Estado Actual</a> -->
