--- a/nuevaReserva/templates/listadoHistorico.html
+++ b/nuevaReserva/templates/listadoHistorico.html
@@ -73,6 +73,9 @@
                             Telefono:
                         </th>
                         <th>
+                            Correo:
+                        </th>
+                        <th>
                             Fecha de la Reservación:
                         </th>
                         <th>
@@ -105,6 +108,10 @@
                         </FONT>
                         <td>
                             <FONT COLOR="white">{{c.telefono|default:" "}}
+                        </td>
+                        </FONT>
+                        <td>
+                            <FONT COLOR="white">{{c.emailr|default:" "}}
                         </td>
                         </FONT>
                         <td>
