--- a/nuevaReserva/templates/listadoHistorico.html
+++ b/nuevaReserva/templates/listadoHistorico.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
-
+            <a href='/exportarExcelHist/' class="btn btn-secondary">Exportar a Excel</a><br><br>
             
         </div>
 
