--- a/nuevaReserva/templates/reservasDelDia.html
+++ b/nuevaReserva/templates/reservasDelDia.html
@@ -36,7 +36,7 @@
     <div class="row">
 
         <div style="text-align: center;" class="col-sm-12 col-md-6 col-lg-2 col-xl-2">
-            <a href='/exportarExcel/' class="btn btn-secondary">Exportar a Excel</a><br><br>
+            
             <a href='/muestraTarde/' class="btn btn-light">Almuerzo</a>
             <a href='/muestraCena/' class="btn btn-light">Cena</a>
             <a href='/reservasDelDia/' class="btn btn-light">Todos</a>
@@ -96,7 +96,7 @@
                         <th colspan="1"></th>
                         <th colspan="1"></th>
                         <th colspan="1"></th>
-                        <th colspan="1"></th>
+                        <th colspan="1"><a href='/exportarExcel/' class="btn btn-secondary">Exportar a Excel</a></th>
 
                     </tr>
                 </thead>
