--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -18,6 +18,7 @@
         <!-- <a class="nav-item nav-link" style="color: #3b1905" href='/enEspera/' >Reservas en espera</a> -->
         <!-- <a class="nav-item nav-link" style="color: #3b1905" href='/enProceso/' >En Progreso</a> -->
         <a class="nav-item nav-link" style="color: #3b1905" href='/historico/' >Histórico</a>
+        <a class="nav-item nav-link" style="color: #3b1905" href='/libroIncidencias/' >Incidencias</a>
         <!-- <a class="nav-item nav-link" style="color: #3b1905" href='/estadoActual/' >Estado Actual</a> -->
         <a class="nav-item nav-link" style="color: #3b1905" href='/registro/'>Nuevo Usuario</a>
         <a class="nav-item nav-link" style="color: #3b1905" href='/logout/'>Cerrar Sesion</a>
