--- a/nuevaReserva/templates/listadoHistorico.html
+++ b/nuevaReserva/templates/listadoHistorico.html
@@ -52,7 +52,7 @@
         </div>
 
         <div style="text-align: center;" class="col-sm-12 col-md-6 col-lg-4 col-xl-4">
-            <h1><b>Histórico de Reservas</b></h1>
+            <h1><b>Calendario de Reservas</b></h1>
             Total de reserva completadas: {{totalCompletado}}
         </div>
 
