--- a/nuevaReserva/templates/historicoPlazas.html
+++ b/nuevaReserva/templates/historicoPlazas.html
@@ -143,46 +143,46 @@
                             <td align="center">
                                 <font color ="white">{{c.m1|default:0}}</font>
                             </td>
-                            <td align="center" style="background-color: rgb(124, 180, 182);">
+                            <td align="center" style="background-color: green;">
                                 <font color ="white">{{c.r1|default:0}}</font>
                             </td>
-                            <td align="center" style="color: white; background-color: #c0c0c0;">
+                            <td align="center" style="color: white; background-color: red;">
                                 <font color ="white">{{d.n1|default:0}}</font>
                             </td>
                             <td align="center">
                                 <font color ="white">{{c.m2|default:0}}</font>
                             </td>
-                            <td align="center" style="background-color: rgb(124, 180, 182);">
+                            <td align="center" style="background-color: green;">
                                 <font color ="white">{{c.r2|default:0}}</font>
                             </td>
-                            <td align="center" style="color: white; background-color: #c0c0c0;">
+                            <td align="center" style="color: white; background-color: red;">
                                 <font color ="white">{{d.n2|default:0}}</font>
                             </td>
                             <td align="center">
                                 <font color ="white">{{c.m3|default:0}}</font>
                             </td>
-                            <td align="center" style="background-color: rgb(124, 180, 182);">
+                            <td align="center" style="background-color: green;">
                                 <font color ="white">{{c.r3|default:0}}</font>
                             </td>
-                            <td align="center" style="color: white; background-color: #c0c0c0;">
+                            <td align="center" style="color: white; background-color: red;">
                                 <font color ="white">{{d.n3|default:0}}</font>
                             </td>
                             <td align="center">
                                 <font color ="white">{{c.m4|default:0}}</font>
                             </td>
-                            <td align="center" style="background-color: rgb(124, 180, 182);">
+                            <td align="center" style="background-color: green;">
                                 <font color ="white">{{c.r4|default:0}}</font>
                             </td>
-                            <td align="center" style="color: white; background-color: #c0c0c0;">
+                            <td align="center" style="color: white; background-color: red;">
                                 <font color ="white">{{d.n4|default:0}}</font>
                             </td>
                             <td align="center">
                                 <font color ="white">{{c.m5|default:0}}</font>
                             </td>
-                            <td align="center" style="background-color: rgb(124, 180, 182);">
+                            <td align="center" style="background-color: green;">
                                 <font color ="white">{{c.r5|default:0}}</font>
                             </td>
-                            <td align="center" style="color: white; background-color: #c0c0c0;">
+                            <td align="center" style="color: white; background-color: red;">
                                 <font color ="white">{{d.n5|default:0}}</font>
                             </td>
                             <td align="center">
@@ -278,46 +278,46 @@
                                         <td align="center">
                                             <font color ="white">{{c.m1|default:0}}</font>
                                         </td>
-                                        <td align="center" style="background-color: rgb(124, 180, 182);">
+                                        <td align="center" style="background-color: green;">
                                             <font color ="white">{{c.r1|default:0}}</font>
                                         </td>
-                                        <td align="center" style="color: white; background-color: #c0c0c0;">
+                                        <td align="center" style="color: white; background-color: red;">
                                             <font color ="white">{{d.n1|default:0}}</font>
                                         </td>
                                         <td align="center">
                                             <font color ="white">{{c.m2|default:0}}</font>
                                         </td>
-                                        <td align="center" style="background-color: rgb(124, 180, 182);">
+                                        <td align="center" style="background-color: green;">
                                             <font color ="white">{{c.r2|default:0}}</font>
                                         </td>
-                                        <td align="center" style="color: white; background-color: #c0c0c0;">
+                                        <td align="center" style="color: white; background-color: red;">
                                             <font color ="white">{{d.n2|default:0}}</font>
                                         </td>
                                         <td align="center">
                                             <font color ="white">{{c.m3|default:0}}</font>
                                         </td>
-                                        <td align="center" style="background-color: rgb(124, 180, 182);">
+                                        <td align="center" style="background-color: green;">
                                             <font color ="white">{{c.r3|default:0}}</font>
                                         </td>
-                                        <td align="center" style="color: white; background-color: #c0c0c0;">
+                                        <td align="center" style="color: white; background-color: red;">
                                             <font color ="white">{{d.n3|default:0}}</font>
                                         </td>
                                         <td align="center">
                                             <font color ="white">{{c.m4|default:0}}</font>
                                         </td>
-                                        <td align="center" style="background-color: rgb(124, 180, 182);">
+                                        <td align="center" style="background-color: green;">
                                             <font color ="white">{{c.r4|default:0}}</font>
                                         </td>
-                                        <td align="center" style="color: white; background-color: #c0c0c0;">
+                                        <td align="center" style="color: white; background-color: red;">
                                             <font color ="white">{{d.n4|default:0}}</font>
                                         </td>
                                         <td align="center">
                                             <font color ="white">{{c.m5|default:0}}</font>
                                         </td>
-                                        <td align="center" style="background-color: rgb(124, 180, 182);">
+                                        <td align="center" style="background-color: green;">
                                             <font color ="white">{{c.r5|default:0}}</font>
                                         </td>
-                                        <td align="center" style="color: white; background-color: #c0c0c0;">
+                                        <td align="center" style="color: white; background-color: red;">
                                             <font color ="white">{{d.n5|default:0}}</font>
                                         </td>
                                         <td align="center">
